force-app/main/default/objects/sf_devops__Hidden_Remote_Change__c/sf_devops__Hidden_Remote_Change__c.object-meta.xml
<CustomObject>
    <description>A join object between RemoteChange and WorkItem to track the items that are hidden in a work item.</description>
    <label>Hidden Remote Change</label>
    <nameField>
        <displayFormat>HRC-{00000}</displayFormat>
        <label>Hidden Remote Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hidden Remote Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>