force-app/main/default/objects/sf_devops__Hidden_Remote_Change__c/fields/sf_devops__Hidden_by_Force_Ignore__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Hidden_by_Force_Ignore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this Hidden Remote Change been hidden by force ignore?</description>
    <label>Hidden by Force Ignore</label>
    <type>Checkbox</type>
</CustomField>