force-app/main/default/objects/sf_devops__Hidden_Remote_Change__c/fields/sf_devops__Remote_Change__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Remote_Change__c</fullName>
    <description>the remote change in this join</description>
    <label>Remote Change</label>
    <referenceTo>sf_devops__Remote_Change__c</referenceTo>
    <relationshipName>HiddenRemoteChanges</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>