force-app/main/default/objects/sf_devops__Hidden_Remote_Change__c/fields/sf_devops__Work_Item__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Work_Item__c</fullName>
    <description>The work item in this join.</description>
    <label>Work Item</label>
    <referenceTo>sf_devops__Work_Item__c</referenceTo>
    <relationshipName>HiddenRemoteChanges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>